--- a/index.html
+++ b/index.html
@@ -1,1 +1,204 @@
+<!doctype html>
+<html lang="id">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Selamat Datang</title>
+  <meta name="description" content="Halaman selamat datang sederhana" />
+  <style>
+    :root{
+      --bg1: #0f172a;
+      --bg2: #0f4c81;
+      --card: rgba(255,255,255,0.06);
+      --accent: #ffd166;
+      --muted: rgba(255,255,255,0.75);
+    }
+    html,body{
+      height:100%;
+      margin:0;
+      font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+      background: linear-gradient(135deg,var(--bg1),var(--bg2));
+      color: #fff;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+    }
+    .container{
+      width:clamp(320px, 90vw, 920px);
+      padding:clamp(20px, 4vw, 36px);
+      background: linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.01));
+      border-radius:16px;
+      box-shadow: 0 8px 30px rgba(2,6,23,0.6);
+      backdrop-filter: blur(6px);
+      display:grid;
+      grid-template-columns: 1fr 320px;
+      gap:24px;
+      align-items:center;
+    }
+    .hero{
+      padding-right:8px;
+    }
+    h1{
+      margin:0 0 8px 0;
+      font-size: clamp(1.6rem, 3.6vw, 2.6rem);
+      line-height:1.05;
+      letter-spacing:-0.02em;
+    }
+    p.lead{
+      margin:0 0 18px 0;
+      color:var(--muted);
+      font-size: clamp(0.95rem, 1.8vw, 1.05rem);
+    }
+    .controls{
+      display:flex;
+      gap:10px;
+      align-items:center;
+      flex-wrap:wrap;
+    }
+    input[type="text"]{
+      padding:10px 12px;
+      border-radius:10px;
+      border:1px solid rgba(255,255,255,0.08);
+      background: rgba(255,255,255,0.02);
+      color: #fff;
+      outline:none;
+      min-width:160px;
+      transition: box-shadow .15s ease;
+    }
+    input[type="text"]:focus{ box-shadow:0 4px 18px rgba(0,0,0,0.4); border-color:var(--accent); }
+    button{
+      padding:10px 14px;
+      border-radius:10px;
+      border: none;
+      cursor:pointer;
+      font-weight:600;
+      background: linear-gradient(90deg, #ffb86b, #ffd166);
+      color:#0b1220;
+      box-shadow: 0 6px 20px rgba(255,177,107,0.18);
+    }
+    .side{
+      background: var(--card);
+      padding:16px;
+      border-radius:12px;
+      text-align:center;
+      color:var(--muted);
+    }
+    .time{
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, "Roboto Mono", monospace;
+      font-weight:700;
+      color:#fff;
+      font-size:1.1rem;
+      margin-top:6px;
+    }
+    footer{
+      grid-column:1/-1;
+      margin-top:10px;
+      font-size:0.85rem;
+      color: rgba(255,255,255,0.6);
+      text-align:center;
+    }
+    @media (max-width:820px){
+      .container{ grid-template-columns: 1fr; }
+      .side{ order:-1; }
+    }
+  </style>
+</head>
+<body>
+  <main class="container" role="main" aria-labelledby="welcome">
+    <section class="hero">
+      <h1 id="welcome">Selamat Datang!</h1>
+      <p class="lead" id="greeting">Senang melihat Anda di sini. Personalisasikan sapaan Anda di bawah atau klik "Sapa" untuk melihat ucapan selamat.</p>
 
+      <div class="controls" aria-label="Kontrol sapaan">
+        <label for="name" class="sr-only" style="position:absolute;left:-9999px">Nama Anda</label>
+        <input id="name" type="text" placeholder="Masukkan nama (opsional)" aria-label="Nama Anda">
+        <button id="greetBtn" type="button">Sapa</button>
+        <button id="clearBtn" type="button" style="background:transparent;color:var(--muted);box-shadow:none;border:1px solid rgba(255,255,255,0.06);">Reset</button>
+      </div>
+    </section>
+
+    <aside class="side" aria-label="Informasi waktu">
+      <div style="font-size:0.95rem">Waktu sekarang (lokal):</div>
+      <div class="time" id="time">--:--:--</div>
+      <div style="margin-top:10px;font-size:0.9rem;color:var(--muted)" id="date">--</div>
+    </aside>
+
+    <footer>
+      Dibuat dengan ♥ — Halaman selamat datang sederhana | fdilatussahra
+    </footer>
+  </main>
+
+  <script>
+    // Utils
+    function pad(n){ return n.toString().padStart(2,'0'); }
+    // Time updater
+    const timeEl = document.getElementById('time');
+    const dateEl = document.getElementById('date');
+    function updateClock(){
+      const d = new Date();
+      timeEl.textContent = pad(d.getHours()) + ':' + pad(d.getMinutes()) + ':' + pad(d.getSeconds());
+      dateEl.textContent = d.toLocaleDateString(undefined, { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
+    }
+    setInterval(updateClock, 1000);
+    updateClock();
+
+    // Greeting logic
+    const nameInput = document.getElementById('name');
+    const greetBtn = document.getElementById('greetBtn');
+    const clearBtn = document.getElementById('clearBtn');
+    const greetingEl = document.getElementById('greeting');
+    const welcomeEl = document.getElementById('welcome');
+
+    // Load saved name
+    const storageKey = 'projekku_welcome_name';
+    const savedName = localStorage.getItem(storageKey);
+    if(savedName){
+      nameInput.value = savedName;
+      applyGreeting(savedName, false);
+    }
+
+    greetBtn.addEventListener('click', () => {
+      const name = nameInput.value.trim();
+      if(name){
+        localStorage.setItem(storageKey, name);
+      } else {
+        localStorage.removeItem(storageKey);
+      }
+      applyGreeting(name, true);
+    });
+
+    clearBtn.addEventListener('click', () => {
+      nameInput.value = '';
+      localStorage.removeItem(storageKey);
+      applyGreeting('', true);
+    });
+
+    function applyGreeting(name, announce){
+      if(name){
+        welcomeEl.textContent = `Selamat Datang, ${name}!`;
+        greetingEl.textContent = `Semoga hari Anda menyenangkan — selamat berkreasi!`;
+      } else {
+        welcomeEl.textContent = 'Selamat Datang!';
+        greetingEl.textContent = 'Senang melihat Anda di sini. Personalisasikan sapaan Anda di bawah atau klik "Sapa" untuk melihat ucapan selamat.';
+      }
+      if(announce){
+        // For accessibility: polite ARIA live update
+        const live = document.createElement('div');
+        live.setAttribute('aria-live','polite');
+        live.style.position='absolute';
+        live.style.left='-9999px';
+        live.textContent = welcomeEl.textContent;
+        document.body.appendChild(live);
+        setTimeout(()=> document.body.removeChild(live), 1000);
+      }
+    }
+
+    // Allow Enter to trigger greeting
+    nameInput.addEventListener('keydown', (e) => {
+      if(e.key === 'Enter') greetBtn.click();
+    });
+  </script>
+</body>
+  </html>
